<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:id="@+id/mainlayout">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/call_native_1"
        android:onClick="onCallNative1"
        android:text="@string/call_native_1">
</Button>
<Button android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/call_native_2" 
		android:text="@string/call_native_2"
		android:onClick="onCallNative2">
</Button>
<Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_s2e_version"
        android:id="@+id/call_s2e_version" 
        android:onClick="onCallS2EVersion">
</Button>
<Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_location"
        android:id="@+id/send_location" 
        android:onClick="onClickSendLocation">
</Button>
<Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_uiid"
        android:id="@+id/send_uiid" 
        android:onClick="onClickSendUiid">
</Button>
<Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_autosymbex"
        android:id="@+id/testAutoSymbex" 
        android:onClick="onClickTestAutoSymbex">
</Button>
</LinearLayout>
